--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     --azul-gaia: #80A6F2;
 }
 
+
 html {
     background-color: #f6f6f6;
     scroll-behavior: smooth;
@@ -22,11 +23,14 @@ html {
 .container-grid button svg
 {
     fill: black;
+
 }
 
 .container-grid button
 {
     width: 110px;
+    background: none;
+    border: none;
 }
 
 * {
@@ -66,6 +70,11 @@ header div.container-grid img {
     background-repeat: no-repeat;
     width: auto;
     background-position: 40%;
+}
+
+#menu-fechado
+{
+    display: none;
 }
 
 div.menu {
